--- a/pi_mqtt.example
+++ b/pi_mqtt.example
@@ -1,5 +1,6 @@
-[DEFAULT]
+[CONFIG]
+client = raspberry
 host = 192.168.1.12
 user = mqtt_client
 password = secretpassword
-topic = "home/raspberrypi/temp"
+topic = home/raspberrypi/
